deployments/pathweb/fileflows/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fileflows
  namespace: media-services
  labels:
    app.kubernetes.io/name: fileflows
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fileflows
  serviceName: fileflows-headless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fileflows
    spec:
      nodeSelector:
        kubernetes.io/hostname: pathweb-worker-baldric
      containers:
      - name: fileflows
        image: revenz/fileflows:latest
        ports:
        - containerPort: 5000
          name: http
        volumeMounts:
        - name: data
          mountPath: /app/Data
          subPath: Data
        - name: data
          mountPath: /app/Logs
          subPath: Logs
        - name: media
          mountPath: /media
        - name: fileflows-workdir
          mountPath: /temp
        resources:
          requests:
            cpu: "100m"
            memory: "300Mi"
          limits:
            cpu: "16"
            memory: 6Gi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: okinawa-media-smb
      - name: fileflows-workdir
        nfs:
          server: 10.229.229.12
          path: /mnt/hdd/applications/fileflows
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
