deployments/pathweb/fileflows/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fileflows-headless
  namespace: media-services
  labels:
    app.kubernetes.io/name: fileflows
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: fileflows
  ports:
  - port: 5000
    targetPort: http
    name: http
