deployments/pathweb/fileflows/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileflows
  labels:
    app.kubernetes.io/name: fileflows
    external-dns: local-pdns
  annotations: {}
  # traefik.ingress.kubernetes.io/router.middlewares: home-network-ak-outpost-authentik-embedded-outpost@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  rules:
  - host: fileflows.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fileflows-headless
            port:
              name: http
  tls:
  - hosts:
    - fileflows.services.home.yrf.me
    secretName: services-wildcard-cert
